# vsr

./: Cargo.toml  README.md
examples/: simple_kv_store.rs
src/: replica.rs
tests/: unit_tests.rs
tests/unit/: replica_tests.rs
